# the-ledger

./: .gitignore  DESIGN.md  DOMAIN_NOTES.md  FINAL_REPORT.md  INTERIM_REPORT.md  README.md  pyproject.toml  requirements.txt  schema.sql
.hypothesis/constants/: 0292a0af40f872f5  033b94b56ce618c1  29b9d3086ea7054f  3b813619ee8f2716  4b9e2a8d1d206816  5046fb14bb180fc2  658d98d426c5f065  6bf706baedfc1c49  751aab09684d8963  802344818f78bcda  90068b0dbc336359  928a6dc0bf639bef  ab2b01195a6629fb  ac55e125b60d2aca  af7b4007e3f48d13  bb9ed1e63e1f501e  c8c0318634ca0cd0  c8e67b9ad4e27827  da154bc68dfeca15  da39a3ee5e6b4b0d  de8f695dc35c7d71  f62c54d78769a72c  f833e84f554c2a87  fd1db70b37638b25  fff433249a46b3fd
data/: seed_events.jsonl
datagen/: generate_all.py
document_refinery/: __init__.py  pipeline.py
ledger/: event_store.py  mcp_server.py  upcasters.py
ledger/agents/: base_agent.py  credit_analysis_agent.py  stub_agents.py
ledger/commands/: handlers.py
ledger/domain/aggregates/: __init__.py  (+4 more)
ledger/integrity/: __init__.py  audit_chain.py  gas_town.py
ledger/projections/: __init__.py  agent_performance.py  application_summary.py  compliance_audit.py  daemon.py
ledger/registry/: client.py
ledger/regulatory/: __init__.py  package.py
ledger/schema/: migrations.sql
ledger/what_if/: __init__.py  projector.py
scripts/: backfill_projections.py  demo.py  run_pipeline.py
tests/: test_archive_stream.py  test_business_rules.py  test_concurrency.py  test_gas_town.py  test_integrity.py  test_mcp_lifecycle.py  test_projections.py  test_upcasting.py
