[project]
name = "the-ledger"
version = "0.1.0"
description = "Agentic Event Store & Enterprise Audit Infrastructure — Week 5 Challenge"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0,<0.30",
    "pydantic>=2.6.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<0.25",
    "faker>=24.0.0,<26.0",
]
agents = [
    "openai>=1.0.0",
    "langgraph>=0.1.0,<0.3",
]
datagen = [
    "faker>=24.0.0,<26.0",
    "reportlab>=4.2.0,<5.0",
    "openpyxl>=3.1.0,<4.0",
]
mcp = [
    "fastmcp>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
